--- a/app/src/main/res/layout/activity_example07.xml
+++ b/app/src/main/res/layout/activity_example07.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintDimensionRatio="w, 1:2"
+        app:layout_constraintDimensionRatio="2:1"
         android:background="#81c784"/>
 
     <TextView
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv01"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintDimensionRatio="h, 1:2"
+        app:layout_constraintDimensionRatio="1:2"
         android:background="#e0e0e0"/>
 
 </android.support.constraint.ConstraintLayout>
